Fixed with for covers to avoid jumps while loading

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -96,7 +96,8 @@
   position: relative;
 
   img {
-    max-width: 80px;
+    width: 80px;
+    height: 80px;
   }
 
   .enqueue {
